k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookingsystem
  labels:
    name: bookingsystem
    app: booking-system
