k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookingsystem-service
  namespace: bookingsystem
  labels:
    app: bookingsystem-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: bookingsystem-web
